# XOPTrader

./: .gitignore  CHANGELOG.md  CHIA_MARKET_MAKER_STRATEGY.md  README.md  TODO.md  _drift_check.py  _drift_check2.py  _drift_check3.py  _q.py  _q2.out  _q2.py  _q3.out  _q3.py  build_debug.txt  build_debug.txtmTest-Path  build_release.txt  buyer.example.yaml  buyer.yaml  config.example.yaml  config.yaml  ctest_drift.txt  pyproject.toml  secrets.example.yaml  test_debug.txt
.github/workflows/: compile-check.yml  release.yml
cpp/: CMakeLists.txt  vcpkg.json
cpp/cmake/: dependencies.cmake
cpp/include/xop/: backtest.hpp  config.hpp  database.hpp  engine.hpp  state.hpp  types.hpp  version.hpp.in
cpp/include/xop/data/: adverse_selection.hpp  market_analyzer.hpp  volatility.hpp
cpp/include/xop/execution/: coin_manager.hpp  market_data.hpp  offer_manager.hpp
cpp/include/xop/monitoring/: alerts.hpp  metrics.hpp  on_chain_reconciler.hpp  pnl.hpp
cpp/include/xop/risk/: drift_analyzer.hpp  hedging.hpp  inventory.hpp  limits.hpp  loss_manager.hpp
cpp/include/xop/rpc/: chia_rpc.hpp  coingecko_client.hpp  dexie_client.hpp
cpp/include/xop/strategy/: arbitrage.hpp  avellaneda.hpp  base.hpp  chia_edge.hpp  competitiveness_pid.hpp  depeg_detector.hpp  fee_tracker.hpp  glft.hpp  kappa_calibrator.hpp  liquidity.hpp  market_allocator.hpp  new_strategies.hpp  order_book_tactics.hpp  regime.hpp  spread.hpp  strategy_portfolio.hpp
cpp/src/: backtest.cpp  config.cpp  database.cpp  engine.cpp  main.cpp  state.cpp
cpp/src/data/: adverse_selection.cpp  market_analyzer.cpp  volatility.cpp
cpp/src/execution/: coin_manager.cpp  market_data.cpp  offer_manager.cpp
cpp/src/monitoring/: alerts.cpp  metrics.cpp  on_chain_reconciler.cpp  pnl.cpp
cpp/src/risk/: drift_analyzer.cpp  hedging.cpp  inventory.cpp  limits.cpp  loss_manager.cpp
cpp/src/rpc/: chia_rpc.cpp  coingecko_client.cpp  dexie_client.cpp
cpp/src/strategy/: arbitrage.cpp  avellaneda.cpp  chia_edge.cpp  fee_tracker.cpp  glft.cpp  kappa_calibrator.cpp  liquidity.cpp  market_allocator.cpp  new_strategies.cpp  order_book_tactics.cpp  regime.cpp  spread.cpp  strategy_portfolio.cpp
cpp/tests/: CMakeLists.txt  test_advanced_trading.cpp  test_avellaneda.cpp  test_coin_manager.cpp  test_competitiveness_pid.cpp  test_competitor_detection.cpp  test_config.cpp  test_database.cpp  test_fee_tracker.cpp  test_glft.cpp  test_inventory.cpp  test_limits.cpp  test_liquidity.cpp  test_market_allocator.cpp  test_market_analyzer.cpp  test_pnl_units.cpp  test_regime.cpp  test_spread.cpp  test_volatility.cpp  test_whale_detection.cpp
db/: schema.md
docs/: 01-chia-ecosystem-overview.md  01-chia-market-maker-overview.md  02-dex-platforms-analysis.md  02-market-making-strategies.md  03-market-making-strategies.md  03-technical-architecture.md  04-implementation-roadmap.md  04-technical-implementation.md  05-risk-management-operations.md  06-implementation-roadmap.md  README.md  SANITY_FAILURE_LOG.md  advanced-trading-methods.md  autobalance-design-plan.md  chia-market-maker.md  competitor-detection.md  dbx-liquidity-rewards.md  integration-review.md  strategy-catalog-update.md  strategy-priority-ranking.md  trading-strategies.md  whale-trader-response.md
docs/CODE REVIEWS/: CODEREVIEW-20260324-2-GitHub-Copilot-GPT-5.4.md  CODEREVIEW-20260324-2-GitHubCopilot-Claude-Opus-4.6.md  CODEREVIEW-20260324-2-GitHubCopilot-GPT5.3-Codex-v1.md  CODEREVIEW-20260324-2-GitHubCopilot-Gemini3.1Pro.md  CODEREVIEW-20260324-ClaudeCode-Opus4.6-Final.md  CODEREVIEW-20260324-ClaudeCode-Opus4.6-Pass1.md  CODEREVIEW-20260324-GitHub-Copilot-GPT-5.4.md  CODEREVIEW-20260324-GitHubCopilot-Claude-Opus-4.6.md  CODEREVIEW-20260324-GitHubCopilot-GPT5.3-Codex-v1.md  CODEREVIEW-20260324-GitHubCopilot-Gemini3.1Pro.md  CODEREVIEW-20260325-GitHubCopilot-Claude-Opus-4.6.md  CODEREVIEW-20260329-GitHub-Copilot-GPT-5.4.md  CODEREVIEW-20260329-GitHubCopilot-Claude-Opus-4.6.md  CODEREVIEW-20260329-GitHubCopilot-GPT5.3-Codex-v1.md  CODEREVIEW-20260329-GitHubCopilot-Gemini3.1Pro.md  CODEREVIEW-20260402-GitHub-Copilot-GPT-5.4.md  CODEREVIEW-20260402-GitHubCopilot-Claude-Opus-4.6.md  CODEREVIEW-20260413-2-GitHub-Copilot-Claude-Opus-4.6-Midpoint-Recycling-Logic-Review.md  CODEREVIEW-20260413-GitHub-Copilot-GPT-5.4-Buyer-Operator-Runbook.md  CODEREVIEW-20260413-GitHub-Copilot-GPT-5.4-Trade-Decision-Blackhole-Audit.md  CODEREVIEW-20260413-GitHub-Copilot-GPT-5.4-Trade-Decision-Tree-Scenarios.md  CODEREVIEW-20260413-GitHub-Copilot-GPT-5.4-Trade-Scenario-Observability-Map.md  CODEREVIEW-20260413-GitHubCopilot-GPT5.3-Codex-v1-Midpoint-Recycling-Full-Rollout-Plan.md  CODEREVIEW-20260413-GitHubCopilot-GPT5.3-Codex-v1-Midpoint-Recycling-Plan-REDLINE-MVP.md  CODEREVIEW-20260413-GitHubCopilot-GPT5.3-Codex-v1-Midpoint-Recycling-Plan.md  COUNTERRESEARCH-20260325-1-GitHubCopilot-Claude-Sonnet-4.6.md  COUNTERRESEARCH-20260329-1-GitHubCopilot-GPT5.3-Codex-v1.md  COUNTERRESEARCH-20260329-GitHub-Copilot-GPT-5.4.md  COUNTERRESEARCH-20260329-GitHubCopilot-Claude-Opus-4.6.md  COUNTERRESEARCH-20260329-GitHubCopilot-Gemini3.1Pro.md  (+12 more)
gui/: __init__.py  app.py  main.py  requirements.txt  theme.py  utils.py
scripts/: _check_offer_log.py  _check_recent_offers.py  analyze_tibet.py  analyze_tibet_quick.py  backfill_competitiveness.py  backfill_pnl.py  backfill_pnl_units.py  calc_pnl.py  cancel_and_split.py  cancel_low_competitiveness_pending.py  check_balance.py  check_balances.py  check_dexie.py  check_dexie2.py  check_offers.py  check_trade_blackholes.py  check_wallet.py  compute_actual_pnl.py  debug_wallet_allocation.py  diag_balances.py  diag_fills_v0746.py  diag_txns.py  diag_v0748.py  fix_stuck_cancels.py  maintain_snapshot_rollups.py  manual_split.py  monitor_fill_history.py  offer_snapshot_with_competitiveness.py  patch_engine_coinpool.py  report_offer_closure_events.py  scheduled_db_maintenance.py  show_coins.py
strategy_notes/: 2026-04-08-competitive-pricing-adjustments.md  2026-04-10-half-spread-cap-and-deadlock-fixes.md  2026-04-10-wall-detection-and-spread-analysis.md  2026-04-11-comprehensive-fix-plan.md
(+31 files in other folders)
