[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "xop-trader"
version = "0.1.0"
description = "CHIA DEX market maker — Avellaneda-Stoikov / GLFT strategy engine"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "pyyaml>=6.0",
    "aiosqlite>=0.19",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
xop-trader = "xop_trader.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
