[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xop-trader"
version = "0.1.5"
description = "CHIA DEX market maker — Avellaneda-Stoikov / GLFT strategy engine"
requires-python = ">=3.11,<4"
dependencies = [
    "aiohttp>=3.9,<4",
    "pyyaml>=6.0,<7",
    "aiosqlite>=0.19,<1",
    "prometheus-client>=0.20,<1",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6.0,<7",
    "pyqtgraph>=0.13.0,<1",
    "requests>=2.31.0,<3",
    "packaging>=23.0",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.3,<1",
]

[project.scripts]
xop-trader = "xop_trader.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
